[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicksbaseutils"
version = "0.0.1"
authors = [
  { name="Nick Horn", email="nick2faktor@gmail.com" },
]
description = "base utils for python"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MariyaSha/humans"
Issues = "https://github.com/MariyaSha/humans"
